--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,27 @@
 {
-    "name": "angujo/elocrud",
-    "description": "Laravel Eloquent CRUD",
-    "type": "library",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "angujo",
-            "email": "angujomondi@gmail.com"
-        }
-    ],
-    "minimum-stability": "dev",
-    "require": {
-        "angujo/dbreader": "dev-master"
+  "name": "angujo/elocrud",
+  "description": "Laravel Eloquent CRUD",
+  "type": "library",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "angujo",
+      "email": "angujomondi@gmail.com"
     }
+  ],
+  "minimum-stability": "dev",
+  "require": {
+    "angujo/dbreader": "dev-master"
+  },
+  "autoload": {
+    "psr-4": {
+      "Angujo\\Elocrud\\": "src/"
+    }
+  },
+  "repositories": [
+    {
+      "type": "path",
+      "url": "D:\\www\\dbreader"
+    }
+  ]
 }
