--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "repositories": [
     {
       "type": "path",
-      "url": "D:\\www\\dbreader"
+      "url": "H:\\www\\dbreader"
     }
   ]
 }
