--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,15 @@
       "type": "path",
       "url": "H:\\www\\dbreader"
     }
-  ]
+  ],
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Angujo\\Elocrud\\Laravel\\ElocrudServiceProvider"
+      ],
+      "aliases": {
+        "Elocrud": "Angujo\\Elocrud\\Laravel\\Factory"
+      }
+    }
+  }
 }
