--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "angujo/dbreader": "dev-master"
+    "angujo/dbreader": "dev-master",
+    "doctrine/inflector": "1.3.*"
   },
   "autoload": {
     "psr-4": {
