1-1 and 1-0 morphs set

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,10 @@
   "repositories": [
     {
       "type": "path",
-      "url": "H:\\www\\dbreader"
+      "url": "H:\\www\\dbreader",
+      "options": {
+        "symlink": true
+      }
     }
   ],
   "extra": {
