--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "minimum-stability": "dev",
   "require": {
     "angujo/dbreader": "dev-master",
-    "doctrine/inflector": "1.3.*"
+    "doctrine/inflector": "1.3.*",
+    "ext-pdo": "*"
   },
   "autoload": {
     "psr-4": {
